--- a/src/main/webapp/resources/styles/css/bootstrap.css
+++ b/src/main/webapp/resources/styles/css/bootstrap.css
@@ -1,6 +1,6 @@
 body {
     font-family: Geneva, Arial, Helvetica, sans-serif;
-    background-image:  url(back/6pEGg6zEubw.jpg);
+    background-image:  url(back/nastol.com.ua_175965.jpg);
 }
 
 h2, th, a {
